# wabznasm

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  build.rs  clippy.toml  debug_tree.rs  deny.toml
.github/workflows/: ci.yml
docs/: 01_architecture.md  02_language_semantics.md  03_implementation_details.md  04_development_guide.md  05_language_reference.md  06_jupyter_integration.md  07_jupyter_kernel_low_level.md  cheat_sheet.md  implementation_plan.md
examples/: connection-example.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jit_fuzz.rs  parser_fuzz.rs
grammar/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
grammar/bindings/c/: tree-sitter-wabznasm.pc.in
grammar/bindings/go/: binding.go  binding_test.go
grammar/bindings/node/: binding.cc  index.js
grammar/bindings/python/tests/: test_binding.py
grammar/bindings/python/tree_sitter_wabznasm/: __init__.py  binding.c
grammar/bindings/rust/: build.rs  lib.rs
grammar/bindings/swift/TreeSitterWabznasm/: wabznasm.h
grammar/bindings/swift/TreeSitterWabznasmTests/: TreeSitterWabznasmTests.swift
grammar/src/: grammar.json  node-types.json  parser.c
scripts/: test-kernel.sh
src/: environment.rs  errors.rs  evaluator.rs  interning.rs  lib.rs  main.rs  parser.rs  repl.rs
src/jupyter/: connection.rs  display.rs  errors.rs  handler.rs  kernel.rs  message_parser.rs  mod.rs  session.rs  signature.rs
storage/: Cargo.toml
storage/src/: config.rs  error.rs  lib.rs  schema.rs  storage.rs  table.rs  value.rs
storage/tests/: integration_tests.rs
tests/: backpressure.rs  comment_tests.rs  connection_test.rs  evaluator.rs  function_evaluation.rs  function_parsing.rs  ir_snapshots.rs  jit_integration.rs  jit_timeout_fix.rs  jupyter_protocol_tests.rs  jupyter_tests.rs  kernel_integration.rs  message_parsing_tests.rs  template_codegen.rs  zmq_message_tests.rs
tests/snapshots/: ir_snapshots__ir_snapshot_addition.snap  ir_snapshots__ir_snapshot_addition.snap.new  ir_snapshots__ir_snapshot_factorial.snap  ir_snapshots__ir_snapshot_factorial.snap.new  ir_snapshots__ir_snapshot_precedence_mul_add.snap  ir_snapshots__ir_snapshot_precedence_mul_add.snap.new
