[package]
name = "fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
libfuzzer-sys = "0.4.6"
wabznasm = { path = ".." }

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
test = false
doc = false

[[bin]]
name = "jit_fuzz"
path = "fuzz_targets/jit_fuzz.rs"
test = false
doc = false
