[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Memory-mapped columnar storage for wabznasm"
license = "EPL-2.0"

[dependencies]
arrow2 = { version = "0.18", features = ["io_ipc", "io_parquet", "compute"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
thiserror = "2"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
